correct align-items

--- a/27-1 - Toast Notification — rus/style.css
+++ b/27-1 - Toast Notification — rus/style.css
@@ -41,7 +41,7 @@ body {
     left: 50%;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
     transform: translateX(-50%);
 }
 
